--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,8 @@
 log4j.rootLogger=info,Console
 
+# mybatis logging
+log4j.logger.com.hemou.common.dao.UUserDao=TRACE
+
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
