update tag and prepare to use redis

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=info,Console
 
 # mybatis logging
-log4j.logger.com.hemou.common.dao.UUserDao=TRACE
+#log4j.logger.com.hemou.common.dao.UUserDao=TRACE
 
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
