--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <json.version>2.10.4</json.version>
     <slf4j.version>1.7.30</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
+    <redis.version>3.2.0</redis.version>
   </properties>
 
   <dependencies>
@@ -273,7 +274,11 @@
       <version>1.1.14</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>${redis.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
