--- a/pom.xml
+++ b/pom.xml
@@ -237,18 +237,16 @@
       <artifactId>shiro-all</artifactId>
       <version>1.2.5</version>
     </dependency>
-    <!--<dependency>
+    <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-core</artifactId>
       <version>1.5.3</version>
-    </dependency>-->
-    <!--
+    </dependency>
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-web</artifactId>
       <version>1.5.3</version>
     </dependency>
-    -->
 
     <dependency>
       <artifactId>ehcache-core</artifactId>
